--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <audio src="./audio/Ethereal.mp3" autoplay="true">Not Supported</audio>
     <div class="container">
       <div class="animation wraper">
         <div class="backgroundImage heroPage"></div>
